fix: flex box align

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,3 +33,10 @@ body {
     "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
   background-color: var(--light-bg);
 }
+
+p {
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
